# zenith

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  calendar.html  dialog.html  git-manager.html  index.html  package-lock.json  package.json  progress.md  rename.html  settings.html  shutdown-popup.html  solo.yml  vite.config.ts  volume-popup.html  weather.html  webapp-window.html  widget-config.html  widgets.html
.github/workflows/: build.yml
alarms/: alarm-popup.html
scripts/: bump-version.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: ai-cli-manager.json  alarm-popup.json  calendar.json  color-picker.json  default.json  dialog.json  eyedropper.json  git-manager.json  rename.json  settings.json  shutdown-popup.json  update.json  volume-popup.json  weather.json  webapp.json  widget-config.json  widgets.json
src-tauri/examples/: smtc_probe.rs
src-tauri/src/: commands.rs  lib.rs  log.rs  main.rs
src-tauri/src/ai_cli/: aggregator.rs  commands.rs  detect.rs  hook_install.rs  mod.rs  model.rs  opencode_client.rs  server.rs
src-tauri/src/battery/: commands.rs
src-tauri/src/calendar/: commands.rs
src-tauri/src/calendar_sync/: accounts.rs  commands.rs  credentials.rs  iso8601.rs  mod.rs  model.rs  oauth.rs  poll.rs  sync.rs
src-tauri/src/calendar_sync/provider/: google.rs  mod.rs  outlook.rs
src-tauri/src/color_picker/: commands.rs  mod.rs
src-tauri/src/config/: commands.rs  mod.rs  model.rs  repository.rs
src-tauri/src/events/: alarm_fire.rs  cleanup.rs  commands.rs  mod.rs  model.rs  repository.rs
src-tauri/src/git/: commands.rs  listen.rs  mod.rs  model.rs  secrets.rs
src-tauri/src/git/provider/: bitbucket.rs  bitbucket_server.rs  forgejo.rs  github.rs  gitlab.rs  mod.rs
src-tauri/src/media/: commands.rs  listen.rs  mod.rs
src-tauri/src/quick_toggle/: commands.rs
src-tauri/src/shared/: known_folders.rs  mod.rs  shell.rs  sync.rs
src-tauri/src/shutdown/: commands.rs
src-tauri/src/system_stats/: commands.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/updates/: mod.rs
src-tauri/src/volume/: commands.rs
src-tauri/src/weather/: commands.rs
src-tauri/src/webapp/: commands.rs  icons.rs  mod.rs  model.rs  webview.rs
src-tauri/src/widgets/: commands.rs  manifest.rs  mod.rs  registry.rs
src-tauri/src/window/: appbar.rs  appbar_monitor.rs  mod.rs  monitor.rs  transparency.rs
src-tauri/src/workspace/: commands.rs  foreground.rs  mod.rs  notification.rs
src-tauri/tests/: test_alarms.rs
src/shared/: color.ts  config.ts  context-menu.ts  events.ts  file-upload.ts  filter-pills.ts  icon.ts  ipc.ts  log.ts  tabs.ts  types.ts  widget-arrange.ts  widget-popup.ts  widgets.ts  win-icons.ts  window.ts
src/styles/: arrange.css  bar-globals.css  bar.css  base.css  components.css  globals.css  icons.css  status-dots.css  tokens.css  window.css
widgets/ai-cli/: manifest.json  widget.css  widget.html  widget.js
widgets/alarms/: manifest.json  widget.css  widget.html  widget.js
widgets/battery/: manifest.json  widget.css  widget.html  widget.js
widgets/clock/: manifest.json  widget.css  widget.html  widget.js
widgets/color_picker/: manifest.json  widget.css  widget.html  widget.js
widgets/datetime/: manifest.json  widget.css  widget.html  widget.js
widgets/git/: manifest.json  widget.css  widget.html  widget.js
widgets/media/: manifest.json  widget.css  widget.html  widget.js
widgets/quick_toggle/: manifest.json  widget.css  widget.html  widget.js
widgets/shutdown/: manifest.json  widget.css  widget.html  widget.js
widgets/system-stats/: manifest.json  widget.html
widgets/system_stats/: manifest.json  widget.css  widget.js
widgets/volume/: manifest.json  widget.css  (+2 more)
(+64 files in other folders)
