[package]
name = "zenith"
version = "0.1.0"
edition = "2021"
description = "A customizable top bar for Windows 11"

[lib]
name = "zenith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Accessibility",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Power",
] }
windows_058 = { package = "windows", version = "0.58", features = ["Win32_Foundation"] }
winvd = "0.0.49"
